// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeolocationSearchInput should render as expected 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 10,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 15,
          "fontWeight": "300",
          "height": 0,
          "lineHeight": 15,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "opacity": 0.5,
        },
        undefined,
      ]
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    style={
      Array [
        Object {
          "borderColor": "rgba(0, 0, 0, 0.2)",
          "borderRadius": 5,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#000",
          "fontSize": 20,
          "paddingBottom": 18,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 18,
        },
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`GeolocationSearchInput should render as expected 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GeolocationSearchInput
    theme={
      Theme {
        "background": "#fff",
        "danger": "#DB0000",
        "foreground": "#000",
        "primary": "#FCD635",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "onChangeText": [Function],
      "theme": Theme {
        "background": "#fff",
        "danger": "#DB0000",
        "foreground": "#000",
        "primary": "#FCD635",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "onChangeText": [Function],
        "theme": Theme {
          "background": "#fff",
          "danger": "#DB0000",
          "foreground": "#000",
          "primary": "#FCD635",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`GeolocationSearchInput should render as expected 3`] = `
<View
  label="Label"
  placeholder="placeholder"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 15,
          "fontWeight": "300",
          "height": 0,
          "lineHeight": 15,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "opacity": 0.5,
        },
        undefined,
      ]
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    style={
      Array [
        Object {
          "borderColor": "rgba(0, 0, 0, 0.2)",
          "borderRadius": 5,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#000",
          "fontSize": 20,
          "paddingBottom": 18,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 18,
        },
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`GeolocationSearchInput should render as expected 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GeolocationSearchInput
    label="Label"
    placeholder="placeholder"
    theme={
      Theme {
        "background": "#fff",
        "danger": "#DB0000",
        "foreground": "#000",
        "primary": "#FCD635",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "label": "Label",
      "onChangeText": [Function],
      "placeholder": "placeholder",
      "theme": Theme {
        "background": "#fff",
        "danger": "#DB0000",
        "foreground": "#000",
        "primary": "#FCD635",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "label": "Label",
        "onChangeText": [Function],
        "placeholder": "placeholder",
        "theme": Theme {
          "background": "#fff",
          "danger": "#DB0000",
          "foreground": "#000",
          "primary": "#FCD635",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
